added some comments

--- a/templates/template.html
+++ b/templates/template.html
@@ -4,6 +4,7 @@
   <title>{{foo}}</title>
 </head>
 <body>
+  <!-- Table created from the csv file-->
   <table>
     {% for i in collection %}
       <tr>
@@ -14,6 +15,7 @@
     {% endfor %}
   </table>
   <br>
-  {{randJob}}
+  <!--Read the name-->
+  Random Occupation: {{randJob}}
 </body>
 </html>
